Added main menu panoramas
- Added images for main menu
- Moved main entrance image to 'main' folder

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<a-assets>
 				<audio id="click-sound" crossorigin="anonymous" src="https://cdn.aframe.io/360-image-gallery-boilerplate/audio/click.ogg"></audio>
 				<img id="arrow" crossorigin="anonymous" src="img/navArrow.png" transparent="true" alpha-test="0.8">
-				<img id="main" crossorigin="anonymous" src="img/panoramas/main.jpg">
+				<img id="main" crossorigin="anonymous" src="img/panoramas/menu/main.jpg">
 				<img id="logo" crossorigin="anonymous" src="img/logo.png">
 				
 
