--- a/thirdFloor.html
+++ b/thirdFloor.html
@@ -17,9 +17,7 @@
 				<audio id="click-sound" crossorigin="anonymous" src="https://cdn.aframe.io/360-image-gallery-boilerplate/audio/click.ogg"></audio>
 				<img id="arrow" crossorigin="anonymous" src="img/navArrow.png" transparent="true" alpha-test="0.8">
 				<img id="main" crossorigin="anonymous" src="img/panoramas/main.jpg">
-				<img id="logo" crossorigin="anonymous" src="img/logo.png">
 				
-
 				<!--3 floor-->
 					<!--Middle-->
 						<img id="floor3HallMiddle1" crossorigin="anonymous" src="img/panoramas/3floor/hallMiddle1.jpg">
@@ -67,27 +65,17 @@
 			</a-assets>
 
 			<a-entity id="sceneMain" class="scene">
-				<a-sky src="#main"></a-sky>
-				<a-image src="#logo" position="0 6 -7.6" rotation="0 0 0" scale="2 2 1"></a-image>
-				<a-text value="Welcome to VR tour of\nPoltava Polytechnic College!" position="0 4 -7.6" width="15" align="center"></a-text>
-				<a-text value="Use             to navigate between halls and audiences." position="0 1.8 -7.6" width="12" align="center"></a-text>
-				<a-image src="#arrow" position="-3 2 -7.6"></a-image>
-				<a-text value="Look around and enjoy your tour!" position="0 0 -7.6" width="11" align="center"></a-text>
-				<a-entity template="src: #link" data-src="sceneFloor3HallMiddle1" data-thumb="#arrow" position="-11.5 -0.12 0.29" rotation="20 90 3"></a-entity>
+				<a-sky src="#floor3HallMiddle1"></a-sky>
+				<a-entity template="src: #link" data-src="sceneFloor3HallMiddle2" data-thumb="#arrow" position="-0.65 -2.5 10" rotation="-30 180 0"></a-entity>
+				<a-entity template="src: #link" data-src="sceneFloor3HallRight1" data-thumb="#arrow" position="-0.65 -2.5 -7.5" rotation="-60 0 0"></a-entity>
 			</a-entity>
 
 			<!--3 floor-->
 				<!--Middle-->
-					<a-entity id="sceneFloor3HallMiddle1" class="scene" visible="false">
-						<a-sky src="#floor3HallMiddle1"></a-sky>
-						<a-entity template="src: #link" data-src="sceneFloor3HallMiddle2" data-thumb="#arrow" position="-0.65 -2.5 10" rotation="-30 180 0"></a-entity>
-						<a-entity template="src: #link" data-src="sceneFloor3HallRight1" data-thumb="#arrow" position="-0.65 -2.5 -7.5" rotation="-60 0 0"></a-entity>
-					</a-entity>
-
 					<a-entity id="sceneFloor3HallMiddle2" class="scene" visible="false">
 						<a-sky src="#floor3HallMiddle2"></a-sky>
 						<a-entity template="src: #link" data-src="sceneFloor3HallLeft1" data-thumb="#arrow" position="-9.3 -2.5 0" rotation="0 90 0"></a-entity>
-						<a-entity template="src: #link" data-src="sceneFloor3HallMiddle1" data-thumb="#arrow" position="9.5 -2.5 -0.5" rotation="0 270 0"></a-entity>
+						<a-entity template="src: #link" data-src="sceneMain" data-thumb="#arrow" position="9.5 -2.5 -0.5" rotation="0 270 0"></a-entity>
 						<a-entity template="src: #link" data-src="sceneAssemblyHall" data-thumb="#arrow" position="-1.7 -2.5 -3" rotation="-23.8 0 8.5"></a-entity>
 						<a-entity template="src: #link" data-src="sceneFloor3HallMiddle3" data-thumb="#arrow" position="-0.17 -2.5 9.3" rotation="0 180 0"></a-entity>
 					</a-entity>
@@ -165,7 +153,7 @@
 				<!--Right side-->
 					<a-entity id="sceneFloor3HallRight1" class="scene" visible="false">
 						<a-sky src="#floor3HallRight1"></a-sky>
-						<a-entity template="src: #link" data-src="sceneFloor3HallMiddle1" data-thumb="#arrow" position="11.8 -2.5 0" rotation="10 270 0"></a-entity>
+						<a-entity template="src: #link" data-src="sceneMain" data-thumb="#arrow" position="11.8 -2.5 0" rotation="10 270 0"></a-entity>
 						<a-entity template="src: #link" data-src="sceneFloor3HallRight2" data-thumb="#arrow" position="-10 -2.5 0" rotation="-40 90 0"></a-entity>
 						<a-entity template="src: #link" data-src="sceneAudience310" data-thumb="#arrow" position="5.6 -2.5 3.1" rotation="0 235 0"></a-entity>
 						<a-entity template="src: #link" data-src="sceneAudience312" data-thumb="#arrow" position="-6.5 -2.5 3.1" rotation="0 90 18.3"></a-entity>
