--- a/secondFloor.html
+++ b/secondFloor.html
@@ -19,6 +19,7 @@
                 
                 <!--Middle-->
                     <img id="hallMiddle1" crossorigin="anonymous" src="img/panoramas/2floor/hallMiddle1.jpg">
+                    <img id="department" crossorigin="anonymous" src="img/panoramas/2floor/department.jpg">
                     <img id="hallMiddle2" crossorigin="anonymous" src="img/panoramas/2floor/hallMiddle2.jpg">
                 <!--/Middle-->
 
@@ -31,8 +32,12 @@
 
                 <!--Right side-->
                     <img id="hallRight1" crossorigin="anonymous" src="img/panoramas/2floor/hallRight1.jpg">
+                    <img id="audience217" crossorigin="anonymous" src="img/panoramas//2floor/audience217.jpg">
+                    <img id="audience218" crossorigin="anonymous" src="img/panoramas//2floor/audience218.jpg">
                     <img id="hallRight2" crossorigin="anonymous" src="img/panoramas/2floor/hallRight2.jpg">
+                    <img id="audience221" crossorigin="anonymous" src="img/panoramas/2floor/audience221.jpg">
                     <img id="hallRight3" crossorigin="anonymous" src="img/panoramas/2floor/hallRight3.jpg">
+                    <img id="audience222" crossorigin="anonymous" src="img/panoramas/2floor/audience222.jpg">
                 <!--/Right side-->
 
                 <script id="link" type="text/html">
@@ -51,6 +56,12 @@
                     <a-sky src="#hallMiddle1"></a-sky>
                     <a-entity template="src: #link" data-src="sceneHallMiddle2" data-thumb="#arrow" position="-0.65 -2.5 10" rotation="-30 180 0"></a-entity>
                     <a-entity template="src: #link" data-src="sceneHallRight1" data-thumb="#arrow" position="0.2 -2.8 -8.5" rotation="-60 0 -5"></a-entity>
+                    <a-entity template="src: #link" data-src="sceneDepartment" data-thumb="#arrow" position="-3.6 -2.8 -1.4" rotation="0 70 5"></a-entity>
+                </a-entity>
+
+                <a-entity id="sceneDepartment" class="scene" visible="false">
+                    <a-sky src="#department"></a-sky>
+                    <a-entity template="src: #link" data-src="sceneHallMiddle1" data-thumb="#arrow" position="8.2 -3.7 -3.3" rotation="0.2 -80 -5"></a-entity>
                 </a-entity>
 
                 <a-entity id="sceneHallMiddle2" class="scene" visible="false">
@@ -89,17 +100,41 @@
                     <a-sky src="#hallRight1"></a-sky>
                     <a-entity template="src: #link" data-src="sceneHallRight2" data-thumb="#arrow" position="-0.2 -3.5 8" rotation="-40 170 0"></a-entity>
                     <a-entity template="src: #link" data-src="sceneHallMiddle1" data-thumb="#arrow" position="10.3 -3.2 -0.3" rotation="0.2 -80 0"></a-entity>
+                    <a-entity template="src: #link" data-src="sceneAudience217" data-thumb="#arrow" position="4.5 -4.3 -3.3" rotation="0.2 -50 10"></a-entity>
+                    <a-entity template="src: #link" data-src="sceneAudience218" data-thumb="#arrow" position="-5.2 -3.2 -2.4" rotation="0.2 60 -25"></a-entity>
+                </a-entity>
+
+                <a-entity id="sceneAudience217" class="scene" visible="false">
+                    <a-sky src="#audience217"></a-sky>
+                    <a-entity template="src: #link" data-src="sceneHallRight1" data-thumb="#arrow" position="8.2 -2.7 0.6" rotation="0.2 -80 -5"></a-entity>
+                </a-entity>
+
+                <a-entity id="sceneAudience218" class="scene" visible="false">
+                    <a-sky src="#audience218"></a-sky>
+                    <a-entity template="src: #link" data-src="sceneHallRight1" data-thumb="#arrow" position="-0.7 -5.3 7.4" rotation="-85 80 90"></a-entity>
                 </a-entity>
 
                 <a-entity id="sceneHallRight2" class="scene" visible="false">
                     <a-sky src="#hallRight2"></a-sky>
                     <a-entity template="src: #link" data-src="sceneHallRight3" data-thumb="#arrow" position="-12.5 -2.3 -0.6" rotation="-40 90 0"></a-entity>
                     <a-entity template="src: #link" data-src="sceneHallRight1" data-thumb="#arrow"position="10.2 -3.1 1" rotation="0.2 -100 3"></a-entity>
+                    <a-entity template="src: #link" data-src="sceneAudience221" data-thumb="#arrow" position="-0.5 -3.2 -1.9" rotation="-40 -60 40"></a-entity>
+                </a-entity>
+
+                <a-entity id="sceneAudience221" class="scene" visible="false">
+                    <a-sky src="#audience221"></a-sky>
+                    <a-entity template="src: #link" data-src="sceneHallRight2" data-thumb="#arrow" position="-11.8 -2.8 9.1" rotation="-70 170 -40"></a-entity>
                 </a-entity>
 
                 <a-entity id="sceneHallRight3" class="scene" visible="false">
                     <a-sky src="#hallRight3"></a-sky>
                     <a-entity template="src: #link" data-src="sceneHallRight2" data-thumb="#arrow" position="11.1 -3.2 -0.9" rotation="0.2 -80 -5"></a-entity>
+                    <a-entity template="src: #link" data-src="sceneAudience222" data-thumb="#arrow" position="-9.5 -3.2 -0.2" rotation="-40 90 0"></a-entity>
+                </a-entity>
+
+                <a-entity id="sceneAudience222" class="scene" visible="false">
+                    <a-sky src="#audience222"></a-sky>
+                    <a-entity template="src: #link" data-src="sceneHallRight3" data-thumb="#arrow" position="-12.6 -3 9.3" rotation="0.2 150 -5"></a-entity>
                 </a-entity>
             <!--/Right side-->
 
