--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 				<img id="arrow" crossorigin="anonymous" src="img/navArrow.png" transparent="true" alpha-test="0.8">
 				<img id="logo" crossorigin="anonymous" src="img/logo.png">
 				<img id="thirdFloorUpStairs" crossorigin="anonymous" src="img/floorsIcons/thirdFloorUpStairs.jpg">
+				<img id="secondFloorUpStairs" crossorigin="anonymous" src="img/floorsIcons/secondFloorUpStairs.jpg">
 				
 				<!--Menu-->
 					<img id="menuEntrance" crossorigin="anonymous" src="img/panoramas/menu/menuEntrance.jpg">
@@ -58,6 +59,7 @@
 					<a-sky src="#menuStairs"></a-sky>
 					<a-entity template="src: #link" data-src="sceneMenuLobby" data-thumb="#arrow" position="15.000 -7.000 1.500" rotation="-120.000 80.000 180.000" scale="1.500 1.500 0.000"></a-entity>
 					<a-entity link="href: thirdFloor.html;" template="src: #link" data-src="" data-thumb="#thirdFloorUpStairs" position="6.000 2.000 -10.000" rotation="0.000 -15.000 0.000" scale="1.500 1.500 0.000"></a-entity>
+					<a-entity link="href: secondFloor.html;" template="src: #link" data-src="" data-thumb="#secondFloorUpStairs" position="6.000 -2.000 -10.000" rotation="0.000 -15.000 0.000" scale="1.500 1.500 0.000"></a-entity>
 				</a-entity>
 			<!--Menu-->
 
