--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 				<audio id="click-sound" crossorigin="anonymous" src="https://cdn.aframe.io/360-image-gallery-boilerplate/audio/click.ogg"></audio>
 				<img id="arrow" crossorigin="anonymous" src="img/navArrow.png" transparent="true" alpha-test="0.8">
 				<img id="logo" crossorigin="anonymous" src="img/logo.png">
+				<img id="secondFloorUpStairs" crossorigin="anonymous" src="img/floorsIcons/secondFloorUpStairs.jpg">
 				<img id="thirdFloorUpStairs" crossorigin="anonymous" src="img/floorsIcons/thirdFloorUpStairs.jpg">
 				<img id="secondFloorUpStairs" crossorigin="anonymous" src="img/floorsIcons/secondFloorUpStairs.jpg">
 				
@@ -58,6 +59,7 @@
 				<a-entity id="sceneMenuStairs" class="scene" visible="false">
 					<a-sky src="#menuStairs"></a-sky>
 					<a-entity template="src: #link" data-src="sceneMenuLobby" data-thumb="#arrow" position="15.000 -7.000 1.500" rotation="-120.000 80.000 180.000" scale="1.500 1.500 0.000"></a-entity>
+					<a-entity link="href: secondFloor.html;" template="src: #link" data-src="" data-thumb="#secondFloorUpStairs" position="6.000 2.000 -10.000" rotation="0.000 0 0.000" scale="1.500 1.500 0.000"></a-entity>
 					<a-entity link="href: thirdFloor.html;" template="src: #link" data-src="" data-thumb="#thirdFloorUpStairs" position="6.000 2.000 -10.000" rotation="0.000 -15.000 0.000" scale="1.500 1.500 0.000"></a-entity>
 					<a-entity link="href: secondFloor.html;" template="src: #link" data-src="" data-thumb="#secondFloorUpStairs" position="6.000 -2.000 -10.000" rotation="0.000 -15.000 0.000" scale="1.500 1.500 0.000"></a-entity>
 				</a-entity>
