--- a/index.html
+++ b/index.html
@@ -12,19 +12,13 @@
 		<script src="js/index.js"></script>
 	</head>
 	<body>
-		<a-scene starting-scene="scene: sceneMenuEntrance">
+		<a-scene starting-scene="scene: sceneEntrance">
 			<a-assets>
 				<audio id="click-sound" crossorigin="anonymous" src="https://cdn.aframe.io/360-image-gallery-boilerplate/audio/click.ogg"></audio>
 				<img id="arrow" crossorigin="anonymous" src="img/navArrow.png" transparent="true" alpha-test="0.8">
 				<img id="logo" crossorigin="anonymous" src="img/logo.png">
-				<img id="thirdFloorUpStairs" crossorigin="anonymous" src="img/floorsIcons/thirdFloorUpStairs.jpg">
-				<img id="secondFloorUpStairs" crossorigin="anonymous" src="img/floorsIcons/secondFloorUpStairs.jpg">
 				
-				<!--Menu-->
-					<img id="menuEntrance" crossorigin="anonymous" src="img/panoramas/menu/menuEntrance.jpg">
-					<img id="menuLobby" crossorigin="anonymous" src="img/panoramas/menu/lobby.jpg">
-					<img id="menuStairs" crossorigin="anonymous" src="img/panoramas/menu/stairs.jpg">
-				<!--Menu-->
+				<img id="entrance" crossorigin="anonymous" src="img/panoramas/index/entrance.jpg">
 
 				<script id="link" type="text/html">
 					<a-entity class="link"
@@ -38,30 +32,15 @@
 				</script>
 			</a-assets>
 
-			<!--Menu-->
-				<a-entity id="sceneMenuEntrance" class="scene">
-					<a-sky src="#menuEntrance"></a-sky>
-					<a-image src="#logo" position="0 6 -7.6" rotation="0 0 0" scale="2 2 1"></a-image>
-					<a-text value="Welcome to VR tour of\nPoltava Polytechnic College!" position="0 4 -7.6" width="15" align="center"></a-text>
-					<a-text value="Use             to navigate between halls and audiences." position="0 1.8 -7.6" width="12" align="center"></a-text>
-					<a-image src="#arrow" position="-3 2 -7.6"></a-image>
-					<a-text value="Look around and enjoy your tour!" position="0 0 -7.6" width="11" align="center"></a-text>
-					<a-entity template="src: #link" data-src="sceneMenuLobby" data-thumb="#arrow" position="-11.5 -0.12 0.29" rotation="20 90 3"></a-entity>
-				</a-entity>
-
-				<a-entity id="sceneMenuLobby" class="scene" visible="false">
-					<a-sky src="#menuLobby"></a-sky>
-					<a-entity template="src: #link" data-src="sceneMenuStairs" data-thumb="#arrow" position="-11.490 -2.327 -13.254" rotation="3.000 50.000 -5.000" scale="1.500 1.500 0.000"></a-entity>
-					<a-entity template="src: #link" data-src="sceneMenuEntrance" data-thumb="#arrow" position="20.000 -3.000 3.000" rotation="0.000 -100.000 0.000" scale="1.500 1.500 0.000"></a-entity>
-				</a-entity>
-
-				<a-entity id="sceneMenuStairs" class="scene" visible="false">
-					<a-sky src="#menuStairs"></a-sky>
-					<a-entity template="src: #link" data-src="sceneMenuLobby" data-thumb="#arrow" position="15.000 -7.000 1.500" rotation="-120.000 80.000 180.000" scale="1.500 1.500 0.000"></a-entity>
-					<a-entity link="href: thirdFloor.html;" template="src: #link" data-src="" data-thumb="#thirdFloorUpStairs" position="6.000 2.000 -10.000" rotation="0.000 -15.000 0.000" scale="1.500 1.500 0.000"></a-entity>
-					<a-entity link="href: secondFloor.html;" template="src: #link" data-src="" data-thumb="#secondFloorUpStairs" position="6.000 -2.000 -10.000" rotation="0.000 -15.000 0.000" scale="1.500 1.500 0.000"></a-entity>
-				</a-entity>
-			<!--Menu-->
+			<a-entity id="sceneEntrance" class="scene">
+				<a-sky src="#entrance"></a-sky>
+				<a-image src="#logo" position="0 6 -7.6" rotation="0 0 0" scale="2 2 1"></a-image>
+				<a-text value="Welcome to VR tour of\nPoltava Polytechnic College!" position="0 4 -7.6" width="15" align="center"></a-text>
+				<a-text value="Use             to navigate between halls and audiences." position="0 1.8 -7.6" width="12" align="center"></a-text>
+				<a-image src="#arrow" position="-3 2 -7.6"></a-image>
+				<a-text value="Look around and enjoy your tour!" position="0 0 -7.6" width="11" align="center"></a-text>
+				<a-entity link="href: firstFloor.html;" template="src: #link" data-src="" data-thumb="#arrow" position="-11.5 -0.12 0.29" rotation="20 90 3"></a-entity>
+			</a-entity>
 
 			<!-- Camera + cursor. -->
 			<a-camera rotation="0 90 0" wasd-controls-enabled="false">
