--- a/thirdFloor.html
+++ b/thirdFloor.html
@@ -69,7 +69,7 @@
 					<a-sky src="#floor3HallMiddle1"></a-sky>
 					<a-entity template="src: #link" data-src="sceneFloor3HallMiddle2" data-thumb="#arrow" position="-0.65 -2.5 10" rotation="-30 180 0"></a-entity>
 					<a-entity template="src: #link" data-src="sceneFloor3HallRight1" data-thumb="#arrow" position="-0.65 -2.5 -7.5" rotation="-60 0 0"></a-entity>
-					<a-entity link="href: index.html" template="src: #link" data-src="" data-thumb="#firstFloorDownStairs" position="7 1 3" rotation="0 -112 0"></a-entity>
+					<a-entity link="href: firstFloor.html" template="src: #link" data-src="" data-thumb="#firstFloorDownStairs" position="7 1 3" rotation="0 -112 0"></a-entity>
                     <a-entity link="href: secondFloor.html" template="src: #link" data-src="" data-thumb="#secondFloorDownStairs" position="7 1 -0.7" rotation="0 -86 0"></a-entity>
 				</a-entity>
 
