Add author watermark to cameras in all floors

--- a/secondFloor.html
+++ b/secondFloor.html
@@ -235,6 +235,7 @@
                 event-set__mouseenter="_event: mouseenter; color: springgreen"
                 event-set__mouseleave="_event: mouseleave; color: black"
                 raycaster="objects: .clickable"></a-cursor>
+                <a-text value="PPC VR Tour made by Andrey Kotliar and Ivan Shapovalov" position="0 -0.80 -1" wrapcount="100" width="1" align="center" text="wrapCount: 50"></a-text>
             </a-camera>
         </a-scene>
     </body>
